--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,7 @@ name: Deploy Next.js to GitHub Pages
 # on définit quand le workflow doit s'exécuté
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   workflow_dispatch:
 
 # Définition des permissions pour le déploiement
