--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,43 +1,36 @@
-name: Deploy Next.js to GitHub Pages
+name: Deploy to Github Pages
 
-# on définit quand le workflow doit s'exécuté
-on:
+on: 
+  # au push sur la branche main on déclenche l'action
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+  # permet de déclencher manuellement l'action
   workflow_dispatch:
 
-# Définition des permissions pour le déploiement
+# définition des permission
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# on s'assure de n'avoir qu'un seul déploiement exécuté à la fois
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
-# on définit les jobs
 jobs:
-  build-and-deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
-
-    # on récupère le code source
+    # set the default working directory
+    defaults:
+      run:
+        working-directory: frontend
     steps:
+      #checkout repo code
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.2.2
 
-      # configuration de Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
+      #setup Node env
+      - name: Setup Node env
+        uses: actions/setup-node@v4.1.0
 
-      # installation des dépendances
+      #install dep with npm cli
       - name: Install dependencies
         run: npm ci
 
@@ -46,21 +39,34 @@ jobs:
         run: |
           echo "module.exports = { output: 'export', images: { unoptimized: true }, basePath: '/${{ github.event.repository.name }}' }" > next.config.js
 
-      # construction de l'application
-      - name: Setup Pages
-        uses: npm run build
+      # build the project
+      - name: Build the project
+        run: npm run build
 
-      # Configuration GitHub Pages
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      # Téléchargement des fichiers de construction
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      # upload built artefact to GitHubPage
+      - name: Upload GitHub Pages artifiact
+        uses: actions/upload-pages-artifact@v3.0.1
         with:
-          path: ./out
+          path: frontend/dist
 
-      # Déploiement sur GitHub Pages
-      - name: Deploy to GitHub Pages
+  #job to deploy artifact to GitHub Pages
+  deploy:
+    #this job depend on the succes of the build job
+    needs: build 
+    runs-on: ubuntu-latest
+
+    environment:
+      name: github-pages
+      # set after deplyment
+      url: ${{ steps.deployment.outputs.pages_url }}
+
+    steps:
+      # deploy the uploaded artifact to GitHub Pages
+      - name: Deploy GitHub Pages site
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v4.1.0
+
+
+
+
+
