--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,20 +17,21 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # set the default working directory
-    defaults:
-      run:
-        working-directory: frontend
+    
     steps:
-      #checkout repo code
+      # Récupération du code source
       - name: Checkout
         uses: actions/checkout@v4.2.2
 
-      #setup Node env
+      # Configuration de l'environnement Node
       - name: Setup Node env
         uses: actions/setup-node@v4.1.0
+        with:
+          node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: './package-lock.json'
 
-      #install dep with npm cli
+      # Installation des dépendances
       - name: Install dependencies
         run: npm ci
 
@@ -43,21 +44,19 @@ jobs:
       - name: Build the project
         run: npm run build
 
-      # upload built artefact to GitHubPage
+      # Upload des fichiers générés
       - name: Upload GitHub Pages artifiact
         uses: actions/upload-pages-artifact@v3.0.1
         with:
-          path: frontend/dist
+          path: ./out
 
   #job to deploy artifact to GitHub Pages
   deploy:
     #this job depend on the succes of the build job
     needs: build 
     runs-on: ubuntu-latest
-
     environment:
       name: github-pages
-      # set after deplyment
       url: ${{ steps.deployment.outputs.pages_url }}
 
     steps:
